k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentiment-service
  namespace: sentiment-ns
spec:
  type: ClusterIP
  selector:
    app: sentiment-api
  ports:
    - port: 80
      targetPort: 8000
