k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentiment-ingress
  namespace: sentiment-ns  
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: sentiment.local  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sentiment-service
                port:
                  number: 80
